实现限速功能与服务器ip自动获取功能

--- a/MiniFTP.conf
+++ b/MiniFTP.conf
@@ -19,8 +19,8 @@ data_connection_timeout=300
 #掩码
 loacl_umask=077
 #最大上传速度
-upload_max_rate=0
+upload_max_rate=512000
 #最大下载速度
-download_mas_rate=0		
+download_max_rate=512000		
 #FTP服务器IP地址
 listen_address=192.168.0.128
