实现空闲断开功能

--- a/MiniFTP.conf
+++ b/MiniFTP.conf
@@ -1,26 +1,28 @@
 #是否开启被动模式
-pasv_enable=YES
+#pasv_enable=YES
 #是否开启主动模式
-port_enable=YES
+#port_enable=YES
 #FTP服务器端口
 listen_port=9188
 #最大连接数
-max_clients=4
+max_clients=2000
 #每ip最大连接数
-max_per_ip=2
+max_per_ip=5
 #accept超时间
 accept_timeout=60
 #connect超时间
 connect_timeout=60
 #控制连接超时时间
-idle_session_timeout=300
+idle_session_timeout=100
 #数据连接超时时间
-data_connection_timeout=300
+data_connection_timeout=5
+#上传文件的权限掩码
+#chown_uploads=0777;				
 #掩码
-loacl_umask=077
+#loacl_umask=077
 #最大上传速度
-upload_max_rate=512000
+#upload_max_rate=512000
 #最大下载速度
-download_max_rate=512000		
+#download_max_rate=512000		
 #FTP服务器IP地址
 listen_address=192.168.0.128
