--- a/MiniFTP.conf
+++ b/MiniFTP.conf
@@ -3,19 +3,19 @@
 #是否开启主动模式
 #port_enable=YES
 #FTP服务器端口
-listen_port=9188
+#listen_port=21
 #最大连接数
-max_clients=2000
+#max_clients=2000
 #每ip最大连接数
-max_per_ip=5
+#max_per_ip=5
 #accept超时间
-accept_timeout=60
+#accept_timeout=60
 #connect超时间
-connect_timeout=60
+#connect_timeout=60
 #控制连接超时时间
-idle_session_timeout=100
+#idle_session_timeout=600
 #数据连接超时时间
-data_connection_timeout=5
+#data_connection_timeout=300
 #上传文件的权限掩码
 #chown_uploads=0777;				
 #掩码
@@ -25,4 +25,4 @@ data_connection_timeout=5
 #最大下载速度
 #download_max_rate=512000		
 #FTP服务器IP地址
-listen_address=192.168.0.128
+#listen_address=192.168.0.128
